--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 <body>
   <div class="main_container">
-    <h2>Reliable, efficient delivery</h2>
-    <h1>Powered by Technology</h1>
-    <p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
-  
+    <div class="header">
+      <h2>Reliable, efficient delivery</h2>
+      <h1>Powered by Technology</h1>
+      <p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>  
+    </div>
     <div class="tiles_container">
       <div class="tile supervisor">
         <h3>Supervisor</h3>
